--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -4,14 +4,17 @@
     <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
       <team-preview [routerLink]="[team.leagueId]" *ngFor="let team of teams.reverse()" [team]="team"></team-preview>
     </div>
-    <button (click)="formVisible=true" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
+    <button (click)="formVisible=true"
+      class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
       Team</button>
   </div>
   <div *ngIf="formVisible">
-    <button (click)="formVisible=false" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Cancel</button>
+    <button (click)="formVisible=false"
+      class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Cancel</button>
     <p class="bold text-3xl">New Draft</p>
-    <form [formGroup]="draftForm"  class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
-      <div  class="w-full">
+    <form [formGroup]="draftForm"
+      class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
+      <div class="w-full">
         <div class="flex space-x-3">
           <div class="w-1/3">
             <label class="p-1">League Name</label>
@@ -30,9 +33,8 @@
           </div>
         </div>
         <div *ngFor="let pokemon of draftForm.value.team" class="flex space-x-3">
-          <div>{{pokemon!.pokemonName}}</div>
+          <sprite [pokemonId]="pokemon!.pokemonName"></sprite>
           <div>{{pokemon!.shiny}}</div>
-          <div>{{pokemon!.captain}}</div>
         </div>
       </div>
       <form [formGroup]="pokemonForm" class="border-2 border-cyan-200 rounded-xl w-full flex">
@@ -40,7 +42,8 @@
           <div class="p-1">Name</div>
           <input formControlName="pokemonName"
             class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-          <div *ngIf="pokemonForm.get('pokemonName')?.touched && pokemonForm.get('pokemonName')?.invalid">Invalid name</div>
+          <div *ngIf="pokemonForm.get('pokemonName')?.touched && pokemonForm.get('pokemonName')?.invalid">Invalid name
+          </div>
         </div>
         <div class="w-1/6">
           <div class="p-1">Shiny</div>
@@ -48,15 +51,11 @@
             class="text-medium bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
 
         </div>
-        <div class="w-1/6">
-          <div class="p-1">Captain</div>
-          <input type="checkbox" formControlName="captain"
-            class="text-medium bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-        </div>
         <button (click)="addNewPokemon()"
           class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Add</button>
       </form>
-      <button (click)="onSubmit()" class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
+      <button (click)="onSubmit()"
+        class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
     </form>
     {{draftForm.value | json}}<br>
     {{pokemonForm.value | json}}
