--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -14,7 +14,7 @@
           *ngFor="let opp of draft.opponents.reverse(); let i = index">
           <div class="w-full flex">
             <div class="text-medium bg-red-200 w-3/5 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-              {{ opp.teamName }}</div>
+              {{ opp.opponentName }}</div>
             <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 text-center">
               {{ score(opp.score) }}</div>
             <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
@@ -38,8 +38,8 @@
         <div class="w-full">
           <div class="flex space-x-3">
             <div class="w-1/3">
-              <label class="p-1">Opponent Team Name</label>
-              <input formControlName="opponentTeamName"
+              <label class="p-1">Opponent Name</label>
+              <input formControlName="opponentName"
                 class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
             </div>
             <div class="w-1/3">
