--- a/src/app/matchup/coveragechart/coveragechart.component.html
+++ b/src/app/matchup/coveragechart/coveragechart.component.html
@@ -1,31 +1,16 @@
 <div class="w-fit">
-    <button (click)="swapTeams()" class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
-        [ngClass]="teamColor(true)">Swap</button>
-    <div class="grid grid-cols-1 gap-1 border-4 md:grid-cols-2 grid-rows-flex bg-slate-400 border-slate-400">
-        <div class="flex w-full h-32 border-2 max-w-64" *ngFor="let pokemon of teams[selectedTeam]"
-            [ngClass]="teamColor()">
-            <div class="h-full w-fit">
-                <sprite [pokemonId]="pokemon.pid"></sprite>
-            </div>
-            <div class="p-2">
-                <div class="w-full text-xs h-1/2"><img
-                        src="https://play.pokemonshowdown.com/sprites/categories/Physical.png">
-                    <div class="grid items-center w-full h-auto grid-cols-6 p-1 grid-rows-flex">
-                        <img *ngFor="let move of pokemon.coverage.physical"
-                            [ngClass]="{'opacity-40': !move.recommended}"
-                            src="https://play.pokemonshowdown.com/sprites/types/{{move.type}}.png" title={{move.name}}>
-                    </div>
-                    <div class="w-full text-xs h-1/2"><img
-                            src="https://play.pokemonshowdown.com/sprites/categories/Special.png">
-                        <div class="grid items-center w-full h-auto grid-cols-6 p-1 grid-rows-flex">
-                            <img *ngFor="let move of pokemon.coverage.special"
-                                [ngClass]="{'opacity-50': !move.recommended}"
-                                src="https://play.pokemonshowdown.com/sprites/types/{{move.type}}.png"
-                                title={{move.name}}>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <button
+    (click)="swapTeams()"
+    class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
+    [ngClass]="teamColor(true)"
+  >
+    Swap
+  </button>
+  <div
+    class="grid grid-cols-1 gap-1 border-4 grid-rows-flex bg-slate-400 border-slate-400"
+  >
+    <div *ngFor="let pokemon of teams[selectedTeam]" [ngClass]="teamColor()">
+      <coverage [pokemon]="pokemon"></coverage>
     </div>
+  </div>
 </div>
