--- a/src/app/matchup/overview/overview.component.html
+++ b/src/app/matchup/overview/overview.component.html
@@ -1,60 +1,76 @@
 <div class="flex flex-wrap items-center overflow-y-auto">
-    <div class="flex flex-row w-256 md:w-128">
-        <div class="w-1/2 m-1">
-            <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">My Team</div>
-            <table id="myOverview" class="w-full border-4 rounded-md table-auto border-slate-400">
-                <tr class="bg-slate-400">
-                    <th></th>
-                    <th></th>
-                    <th>Name</th>
-                    <th>{{sortStat | uppercase}}</th>
-                </tr>
-                <tr *ngFor="let pokemon of aTeam.team" class="h-12 border-b bg-cyan-300 border-slate-400">
-                    <td class="w-8 -mr-2">
-                        <div *ngIf="pokemon.captain">
-                            <div>
-                                <img src="../../../assets/icons/tera.svg">
-                            </div>
-                            <div>
-                                <img src="../../../assets/icons/z.svg">
-                            </div>
-                        </div>
-                    </td>
-                    <td class="w-12">
-                        <sprite [pokemonId]="pokemon.pid" [flipped]="true"></sprite>
-                    </td>
-                    <td class="w-32 text">{{pokemon.name}}</td>
-                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
-                </tr>
-            </table>
-        </div>
-        <div class="w-1/2 m-1">
-            <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">Opponent Team</div>
-            <table id="oppOverview" class="w-full border-4 table-auto border-slate-400">
-                <tr class="bg-slate-400">
-                    <th>{{sortStat | uppercase}}</th>
-                    <th>Name</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr *ngFor="let pokemon of bTeam.team" class="h-12 bg-red-400 border-b border-slate-400">
-                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
-                    <td class="w-32 text-end">{{pokemon.name}}</td>
-                    <td class="w-12">
-                        <sprite [pokemonId]="pokemon.pid"></sprite>
-                    </td>
-                    <td>
-                        <div class="w-8 -ml-2" *ngIf="pokemon.captain">
-                            <div>
-                                <img src="../../../assets/icons/tera.svg">
-                            </div>
-                            <div>
-                                <img src="../../../assets/icons/z.svg">
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
+  <div class="flex flex-row w-256 md:w-128">
+    <div class="w-1/2 m-1">
+      <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">
+        My Team
+      </div>
+      <table
+        id="myOverview"
+        class="w-full border-4 rounded-md table-auto border-slate-400"
+      >
+        <tr class="bg-slate-400">
+          <th></th>
+          <th></th>
+          <th>Name</th>
+          <th>{{ sortStat | uppercase }}</th>
+        </tr>
+        <tr
+          *ngFor="let pokemon of aTeam.team"
+          class="h-12 border-b bg-cyan-300 border-slate-400"
+        >
+          <td class="w-8 -mr-2">
+            <div *ngIf="pokemon.captain">
+              <div>
+                <img src="../../../assets/icons/tera.svg" />
+              </div>
+              <div>
+                <img src="../../../assets/icons/z.svg" />
+              </div>
+            </div>
+          </td>
+          <td class="w-20">
+            <sprite [pokemonId]="pokemon.pid" [flipped]="true"></sprite>
+          </td>
+          <td class="w-32 text">{{ pokemon.name }}</td>
+          <td class="w-12 text-center">{{ pokemon.baseStats.spe }}</td>
+        </tr>
+      </table>
     </div>
+    <div class="w-1/2 m-1">
+      <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">
+        Opponent Team
+      </div>
+      <table
+        id="oppOverview"
+        class="w-full border-4 table-auto border-slate-400"
+      >
+        <tr class="bg-slate-400">
+          <th>{{ sortStat | uppercase }}</th>
+          <th>Name</th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr
+          *ngFor="let pokemon of bTeam.team"
+          class="h-12 bg-red-400 border-b border-slate-400"
+        >
+          <td class="w-12 text-center">{{ pokemon.baseStats.spe }}</td>
+          <td class="w-32 text-end">{{ pokemon.name }}</td>
+          <td class="w-20">
+            <sprite [pokemonId]="pokemon.pid"></sprite>
+          </td>
+          <td>
+            <div class="w-8 -ml-2" *ngIf="pokemon.captain">
+              <div>
+                <img src="../../../assets/icons/tera.svg" />
+              </div>
+              <div>
+                <img src="../../../assets/icons/z.svg" />
+              </div>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
