--- a/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
+++ b/src/app/opponent-overview/opponent-schedule/opponent-schedule.component.html
@@ -1,7 +1,7 @@
-<div class="container p-4 mx-auto">
-  <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
+<div class="container flex flex-col p-4 mx-auto xl:w-2/3">
+  <div class="grid order-2 grid-cols-1 gap-4 mb-4 md:grid-cols-3 md:order-1">
     <div
-      class="flex flex-col order-2 h-full p-1 rounded-lg md:order-1 bg-cyan-200"
+      class="flex flex-col order-1 h-full p-1 rounded-lg md:order-1 bg-cyan-200"
     >
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700">Local Time Zone</label>
@@ -33,7 +33,7 @@
         />
       </div>
     </div>
-    <div class="order-1 p-1 md:order-2">
+    <div class="order-3 p-1 md:order-2">
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700">Time Difference</label>
         <input
@@ -47,27 +47,27 @@
         <input
           type="checkbox"
           id="emailReminder"
-          [(ngModel)]="emailReminder"
+          [(ngModel)]="timeData.email"
           class="mr-2"
         />
-        <div *ngIf="!emailReminder" class="text-sm font-medium text-gray-700">
+        <div *ngIf="!timeData.email" class="text-sm font-medium text-gray-700">
           Email a reminder
         </div>
-        <div *ngIf="emailReminder" class="text-sm font-medium text-gray-700">
+        <div *ngIf="timeData.email" class="text-sm font-medium text-gray-700">
           Email a reminder
           <input
             class="w-8 border"
             min="0"
             max="48"
             type="number"
-            [(ngModel)]="emailTime"
+            [(ngModel)]="timeData.emailTime"
           />
-          {{ emailTime === 1 ? "hour" : "hours" }}
+          {{ timeData.emailTime === 1 ? "hour" : "hours" }}
           before
         </div>
       </div> -->
     </div>
-    <div class="order-3 p-1 bg-red-200 rounded-lg">
+    <div class="order-2 p-1 bg-red-200 rounded-lg md:order-3">
       <div class="w-full">
         <label class="text-sm font-medium text-gray-700"
           >Opponent Time Zone</label
@@ -115,7 +115,7 @@
       </div>
     </div>
   </div>
-  <div class="flex justify-between mt-4">
+  <div class="flex justify-between order-1 mb-2 md:order-2">
     <button
       [routerLink]="'/draft/' + teamId"
       type="button"
@@ -123,11 +123,12 @@
     >
       Cancel
     </button>
-    <!-- <button
+    <button
       type="button"
+      (click)="submit()"
       class="px-4 py-2 font-medium text-white bg-indigo-600 rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-indigo-500"
     >
       Save
-    </button> -->
+    </button>
   </div>
 </div>
